<resources>
    <string name="app_name">MTN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MTN UGANDA</string>
    <string name="nav_header_subtitle">www.mtn.co.ug</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Persons">Persons</string>
    <string name="menu_Business">Business</string>
    <string name="menu_Investors">Investors</string>
    <string name="menu_Insurance">Insurance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>