<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_work_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_persons"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_Persons" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_baseline_business_center_24"
            android:title="@string/menu_Business" />
        <item
            android:id="@+id/nav_investors"
            android:icon="@drawable/ic_baseline_inventory_2_24"
            android:title="@string/menu_Investors" />
        <item
            android:id="@+id/nav_insurance"
            android:icon="@drawable/ic_baseline_security_24"
            android:title="@string/menu_Insurance" />
    </group>
</menu>